# echoed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
lib/: cli.py
